@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.reaktivity</groupId>
   <artifactId>nukleus-kafka</artifactId>
-  <version>0.288</version>
+  <version>0.289</version>
   <name>Kafka Nukleus Implementation</name>
   <description>Kafka Nukleus Implementation</description>
   <url>https://github.com/reaktivity/nukleus-kafka.java</url>
@@ -59,10 +59,10 @@
 
     <k3po.version>3.1.0</k3po.version>
 
-    <nukleus.plugin.version>0.84</nukleus.plugin.version>
+    <nukleus.plugin.version>0.85</nukleus.plugin.version>
 
-    <nukleus.kafka.spec.version>0.170</nukleus.kafka.spec.version>
-    <reaktor.version>0.161</reaktor.version>
+    <nukleus.kafka.spec.version>0.171</nukleus.kafka.spec.version>
+    <reaktor.version>0.163</reaktor.version>
 
     <kafka.clients.version>1.0.0</kafka.clients.version>
   </properties>
@@ -79,11 +79,6 @@
       <artifactId>reaktor</artifactId>
       <version>${reaktor.version}</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.glassfish</groupId>
-      <artifactId>javax.json</artifactId>
-      <version>1.1.4</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -261,6 +256,7 @@
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.6</version>
         <configuration>
+          <propertyName>jacoco.java.option</propertyName>
           <excludes>
             <exclude>org/reaktivity/nukleus/kafka/internal/types/**/*.class</exclude>
           </excludes>
@@ -292,14 +288,29 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.moditect</groupId>
+        <artifactId>moditect-maven-plugin</artifactId>
+        <version>1.0.0.RC1</version>
+        <configuration>
+          <module>
+            <moduleInfoFile>src/main/moditect/module-info.java</moduleInfoFile>
+          </module>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>add-module-info</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.1</version>
+        <version>3.0.0-M5</version>
         <configuration>
-          <argLine>@{argLine} --add-exports java.base/sun.nio.ch=org.agrona.core --add-opens java.base/sun.nio.ch=org.agrona.core</argLine>
-          <excludes>
-            <exclude/>
-          </excludes>
+          <argLine>@{jacoco.java.option}</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -331,10 +342,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.22.1</version>
+        <version>3.0.0-M4</version>
         <configuration>
-          <argLine>@{argLine}</argLine>
-          <trimStackTrace>false</trimStackTrace>
+          <argLine>@{jacoco.java.option}</argLine>
         </configuration>
         <executions>
           <execution>
@@ -349,13 +359,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.4</version>
-        <configuration>
-          <archive>
-            <manifestEntries>
-              <Automatic-Module-Name>org.reaktivity.nukleus.kafka</Automatic-Module-Name>
-          </manifestEntries>
-        </archive>
-        </configuration>
         <executions>
           <execution>
             <goals>
@@ -422,6 +425,19 @@
                     <versionRange>[1.1.0,)</versionRange>
                     <goals>
                       <goal>check</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.moditect</groupId>
+                    <artifactId>moditect-maven-plugin</artifactId>
+                    <versionRange>[1.0.0.RC1,)</versionRange>
+                    <goals>
+                      <goal>add-module-info</goal>
                     </goals>
                   </pluginExecutionFilter>
                   <action>
